fixed navbar covering content at top of page

--- a/public/style.css
+++ b/public/style.css
@@ -12,7 +12,7 @@
 html, body {
 	width: 100%;
 	height: 100%;
-	padding: 0;
+	padding: 2.5% 0 0 0;
 	margin: 0;
 	color: #fff;
 	background-color: var(--navy);
@@ -23,7 +23,7 @@ h2, p {
 }
 
 .container {
-	height: 94%;
+	height: 100%;
 	width: 100%;
 	display: flex;
 	flex-direction: column;
@@ -124,7 +124,7 @@ form {
 	top: 0;
 	position: absolute;
 	display: block;
-	font-size: 1.2em;
+	font-size: 1em;
 	color: #fff;
 }
 
